tests/expected/test013.semant.err
test013.usc:31:1: error: USC requires non-void functions to end with a return
}
^
1 Error(s)
